# basic-app

./: .env  Makefile  Pipfile  README.rst  alembic.ini  docker-compose.yaml  pylintrc  setup.cfg
src/basic_app/: __init__.py  __main__.py  argument.py
src/basic_app/alembic/: env.py
src/basic_app/alembic/versions/: 2e1e0392518b_create_user_table.py
src/basic_app/daos/: __init__.py  user.py
src/basic_app/lib/: config.py  exception.py  logging.py  password.py  postgres.py  uvicorn.py
src/basic_app/models/: __init__.py  base.py  user.py
src/basic_app/routers/: __init__.py  google_signin.py  user.py
src/basic_app/services/: __init__.py  user.py
src/basic_app/templates/: google-signin.html
src/tests/: helper.py
src/tests/lib/: test_config.py  test_logging.py
src/tests/routers/: test_user.py
src/tests/services/: test_user.py
