# Please refer to:
# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = basic-app
version = 0.0.1
author = aaaaaaason
author_email = aaaaaaason@gmail.com
description = A simple app using FastAPI and SQLAlchemy
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/aaaaaaason/basic-app
#project_urls =
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    run-basic-app = basic_app.__main__:main

[egg_info]
egg_base = dist
